Changed certain routes and added other stuff
